reduced client.material.
reduced Entity#getPosition().